Cleanup: migrate req/res struct naming
