# services/rfq/api/model/request.go
@@ -34,8 +34,8 @@ type GetQuoteSpecificRequest struct {
 	DestTokenAddr   string `json:"destTokenAddr"`
 }
 
-// PutUserQuoteRequest represents a user request for quote.
-type PutUserQuoteRequest struct {
+// PutRFQRequest represents a user request for quote.
+type PutRFQRequest struct {
 	UserAddress  string    `json:"user_address"`
 	IntegratorID string    `json:"integrator_id"`
 	QuoteTypes   []string  `json:"quote_types"`
@@ -61,8 +61,8 @@ type QuoteData struct {
 	RelayerAddress   *string `json:"relayer_address"`
 }
 
-// RelayerWsQuoteRequest represents a request for a quote to a relayer.
-type RelayerWsQuoteRequest struct {
+// WsRFQRequest represents a request for a quote to a relayer.
+type WsRFQRequest struct {
 	RequestID string    `json:"request_id"`
 	Data      QuoteData `json:"data"`
 	CreatedAt time.Time `json:"created_at"`
@@ -75,9 +75,9 @@ type SubscribeActiveRFQRequest struct {
 	ChainIDs []int `json:"chain_ids"`
 }
 
-// NewRelayerWsQuoteRequest creates a new RelayerWsQuoteRequest.
-func NewRelayerWsQuoteRequest(data QuoteData, requestID string) *RelayerWsQuoteRequest {
-	return &RelayerWsQuoteRequest{
+// NewWsRFQRequest creates a new WsRFQRequest.
+func NewWsRFQRequest(data QuoteData, requestID string) *WsRFQRequest {
+	return &WsRFQRequest{
 		RequestID: requestID,
 		Data:      data,
 		CreatedAt: time.Now(),
